# subtitleStatus

./: .gitignore  .travis.yml  Pipfile  README.md  YouTubeClient.py  alert_if_subtitles_in_undefined_conditions.py  amara_api_test.py  amara_import.py  calculate_statistics_data.py  check_kanboard_tasks_for_orphaned_tasks.py  create_pad_links.py  data_dump.py  data_import_from_csv.py  fill_filename_column.py  fix_dates_from_amara.py  fix_sbv_linebreaks.py  fix_wrong_update_data_from_schedules.py  flake.nix  force_31c3_update.py  force_32c3_update.py  force_33c3_update.py  force_34c3_update.py  force_calculate_statistics.py  force_fahrplan_updates.py  force_subtitles_amara_updates.py  get_finished_amara_talks.py  import_amara_form_json_file.py  import_and_convert_srt_file_from_amara_for_youtube.py  import_languages.py  import_tracker_infos_from_voc_json.py  import_video_link_via_amara_key.py  init_test_database.sh  manage.py  normalize_doppelgaenger.py  notifications_cronjob.py  pad_from_trint.py  pad_from_youtube.py  print_full_events_statistics_in_detail.py  pyproject.toml  requirements.txt  (+16 more)
account/: urls.py  views.py
credentials/: __init__.py
downloads/: remove_line_breaks_from_youtube.py
import_scripts/: import_video_link_via_amara_key.py
nix/: default.nix  django-account.nix  django-bootstrap-form.nix  django-extensions.nix  python-kanboard-api.nix
subtitleStatus/: settings.py  subtitleStatus.cfg.example  subtitleStauts.cfg.example  urls.py  wsgi.py
templates/: base.html
update_scripts/: amara_import.py  force_fahrplan_updates.py
www/: admin.py  forms.py  (+11 more)
(+279 files in other folders)
