[tool.poetry]
name = "subtitlestatus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bcrypt = "*"
cachetools = "*"
certifi = "*"
cffi = "*"
chardet = "*"
cryptography = "*"
Django = "3.2"
django-account = "*"
django-bootstrap-form = "*"
django-extensions = "*"
django-pglocks = "*"
django-urlauth = "*"
factory-boy = "*"
Faker = "*"
google-api-python-client = "*"
google-auth = "*"
google-auth-httplib2 = "*"
httplib2 = "*"
idna = "*"
isodate = "*"
kanboard = "*"
lxml = "*"
oauth2client = "*"
paramiko = "*"
psycopg2 = "*"
pyasn1 = "*"
pyasn1-modules = "*"
pycparser = "*"
PyNaCl = "*"
pysftp = "*"
python-dateutil = "*"
pytz = "*"
requests = "*"
rsa = "*"
simplejson = "*"
six = "*"
sqlparse = "*"
text-unidecode = "*"
twitter = "*"
uritemplate = "*"
urllib3 = "*"
uWSGI = "*"
xmltodict = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
